[build-system]
requires = ["maturin @ git+https://github.com/PyO3/maturin.git@99a2a5a84443345943aececdf0bf854c49c26110"]
build-backend = "maturin"

[project]
name = "rpds-py"
description = "Python bindings to Rust's persistent data structures (rpds)"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["data structures", "rust", "persistent"]
authors = [
  {email = "Julian+rpds@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",

]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/crate-py/rpds"
Issues = "https://github.com/crate-py/rpds/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/crate-py/rpds"

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["rpds"]

[tool.maturin]
features = ["pyo3/extension-module"]
